manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-sample-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: cloud-sample-prod.cepg-82230457-sa.kubepia.net/applications
    http:
      paths:
      - path: /
        backend:
          service:
            name: cloud-sample
            port:
              number: 8080
        pathType: Prefix
